--- a/css/main.css
+++ b/css/main.css
@@ -3,25 +3,36 @@
         background-image: url("../img/hero2.png");            
         height: 100vh;       
         /* Create the parallax scrolling effect */
-        background-attachment: fixed;
+        /*background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover;*/
         z-index: -1;
 }
 
-
-#topmenu {
-    width:400px;
-    position: absolute;
-    right:5rem;
+.fullpage {
+    min-height: 100vh;
+    padding-left: 5vh;
+    padding-right:5vh;
 }
+
+
+#nav-menu-link-container {
+    background-color: rgba(250, 250, 250, 0.65);
+    padding: 0.3rem;
+}
+
+#menu-navbar {
+    margin-left:78vw;
+}
+
 
 #header-desc {
     width: 35vw;
     position: absolute;
     bottom:10vw;
     left:5vw;
+    /*box-shadow: 0 9px 30px 3px rgba(0,0,0,.46);*/
 }
 
 #header-desc-text {    
@@ -30,11 +41,37 @@
 }
 
 #header-logo-big {    
-    background-image: url("../img/logo.png");     
+    position: absolute;
+    background-image: url("../img/logo2.png");     
     background-repeat: no-repeat;
-    background-size: 60%;
-    background-position-y: 10rem;
+    background-size: 50%;    
+    background-position-y:4rem;
     background-position-x: center;
     width: 100vw;
     height: 100vh;
+    bottom: 0px;
+}  
+
+#header-logo-big2 {    
+    background-image: url("../img/logo.png");     
+    background-repeat: no-repeat;
+    background-size: 30%;
+    background-position-y: 20rem;
+    background-position-x: center;
+    position:fixed;
+    top:0px;
+    width: 100vw;
+    height: 100vh;
+    visibility: hidden;
 }
+
+#products-container {
+    padding-top:3vh;
+}
+
+#product-container {
+    background-color: rgba(250, 250, 250, 0.6);
+}
+
+
+/*https://codemyui.com/animated-material-design-navigation-concept/*/
