--- a/css/main.css
+++ b/css/main.css
@@ -42,27 +42,26 @@
 
 #header-logo-big {    
     position: absolute;
-    background-image: url("../img/logo2.png");     
+    background-image: url("../img/logo3.png");     
     background-repeat: no-repeat;
-    background-size: 50%;    
-    background-position-y:4rem;
-    background-position-x: center;
+    background-size: 60%;    
+    background-position-y: bottom;
+    background-position-x: 40vw;
     width: 100vw;
     height: 100vh;
-    bottom: 0px;
 }  
 
 #header-logo-big2 {    
     background-image: url("../img/logo.png");     
     background-repeat: no-repeat;
-    background-size: 30%;
-    background-position-y: 20rem;
+    background-size: 45%;
+    background-position-y: 2rem;
     background-position-x: center;
-    position:fixed;
+    position:absolute;
     top:0px;
     width: 100vw;
     height: 100vh;
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 #products-container {
@@ -73,5 +72,8 @@
     background-color: rgba(250, 250, 250, 0.6);
 }
 
+#product-modal-desc {
+    max-width: 80vw;
+}
 
 /*https://codemyui.com/animated-material-design-navigation-concept/*/
