--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,7 @@
-.header {
-        /* The image used */
-        /*background-image: url("../img/herovector.png");  
-        background-size: 100%;    */      
+.header { 
+        position: fixed;
+        top:0;
         height: 100vh;       
-        /* Create the parallax scrolling effect */
-        /*background-attachment: fixed;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;*/
         z-index: -1;
 }
 
@@ -16,8 +10,9 @@
 }
 
 #menu-navbar {
-    margin-left:70vw;
+    margin-left:78vw;
 }
+
 
 
 #header-desc {
@@ -25,7 +20,7 @@
     position: absolute;
     bottom:10vw;
     left:5vw;
-    /*box-shadow: 0 9px 30px 3px rgba(0,0,0,.46);*/
+
 }
 
 #header-desc-text {    
@@ -45,7 +40,7 @@
 }  
 
 #header-mountains {
-    position: absolute;
+    position: fixed;
     top: 10vh;
     background-image: url("../img/herovector2.png");     
     background-repeat: no-repeat;
@@ -91,7 +86,35 @@
     max-width: 80vw;
 }
 
+#color-select {
+    max-width: 35rem;
+    position: absolute;
+    top:3vh;
+    left:3vw;        
+}
+
+.color-select-button {
+    width:7rem;
+}
+
+#chair-display {
+    position:absolute;
+    width:100%;
+    height:100%;
+    z-index: -1;
+}
+
+#chair-display-img {
+    height:100%;
+    position:absolute;
+    right:10vw;
+    bottom:-2rem;
+    z-index: -1;
+}
+
+/*box-shadow: 0 9px 30px 3px rgba(0,0,0,.46);*/
 /*https://codemyui.com/animated-material-design-navigation-concept/*/
+/*https://codemyui.com/material-design-button-colour-background-colour/*/
 
 
 .sliding-background {
@@ -111,3 +134,71 @@
       transform: translate3d(-1692px, 0, 0);
     }
   }
+
+
+  .btn-circle
+  {
+    width: 2.5rem;
+    height: 2.5rem;
+    padding: 10px 10px;
+    font-size: 0px;
+    line-height: 1.33;
+    border-radius: 35px;
+    background-color: rgba(250, 250, 250, 0.75);
+    position: absolute;
+  }
+
+  #btn-cushion1 {
+      right: 28vw;
+      bottom: 75vh;      
+  }
+
+  #btn-cushion2 {
+    right: 27.5vw;
+    bottom: 40.5vh;      
+  }
+  #btn-armrest {    
+    right: 39%;
+    bottom: 48%;      
+  }
+
+  #btn-backadjust {
+    right: 17.5vw;
+    bottom: 33vh;      
+  }
+  #btn-back {
+    right: 24.5vw;
+    bottom: 60.5vh;      
+  }
+  #btn-seat {
+    right: 33.5vw;
+    bottom: 31.5vh;      
+  }
+
+
+  .fa-circle-o {
+      color:red;
+  }
+  
+
+/* WAVE */
+@keyframes burst {
+  0% {opacity:.6}
+  50% {transform:scale(1.8);opacity:0}
+  100%{opacity:0}
+}
+.faa-burst.animated,
+.faa-burst.animated-hover:hover,
+.faa-parent.animated-hover:hover > .faa-burst {
+  animation: burst 4s infinite linear
+}
+.faa-burst.animated.faa-fast,
+.faa-burst.animated-hover.faa-fast:hover,
+.faa-parent.animated-hover:hover > .faa-burst.faa-fast {
+  animation: burst 1s infinite linear
+}
+.faa-burst.animated.faa-slow,
+.faa-burst.animated-hover.faa-slow:hover,
+.faa-parent.animated-hover:hover > .faa-burst.faa-slow {
+  animation: burst 3s infinite linear
+}
