--- a/css/main.css
+++ b/css/main.css
@@ -87,21 +87,84 @@
 }
 
 #color-select {
-    max-width: 35rem;
+    width: 10rem;
     position: absolute;
-    top:3vh;
-    left:3vw;        
+    top: 25vh;
+    right:5rem;   
+    z-index: 1;     
+    background-color: rgba(250, 250, 250, 0.65);
+}
+
+#product-name {
+    width: 35rem;
+    position: absolute;
+    top:2rem;
+    left:2rem;       
+    background-color: rgba(250, 250, 250, 0.65);
+}
+
+#more-info {
+    width: 35rem;
+    position: absolute;
+    top:8rem;
+    left:2rem;   
+    z-index: 1;    
+    background-color: rgba(250, 250, 250, 0.65); 
+}
+
+#photo-gallery {
+    width: 35rem;
+    position: absolute;
+    top:36rem;
+    left:2rem;   
+    z-index: 1;    
+    background-color: rgba(250, 250, 250, 0.65); 
+}
+
+.product-photo-mini {
+    min-width: 10rem;
+}
+
+.product-photo-mini-modal {
+    width: 7rem;
+}
+
+.product-photo-modal-big {
+    width:100%;
+}
+
+#product-gallery-modal {          
+    left:27vw;
+    top:7rem;
+}
+
+.product-photo-modal-navbutton {
+    font-size:1.8rem;
+    position:absolute;
+    top:11.5rem; 
+}
+
+#product-photo-modal-navbutton-next {
+    right:-4rem;  
+}
+
+#product-photo-modal-navbutton-previous {     
+    left:-4rem;  
 }
 
 .color-select-button {
     width:7rem;
 }
 
+.more-info-button {
+    font-size: 0.9em;
+}
+
 #chair-display {
     position:absolute;
     width:100%;
     height:100%;
-    z-index: -1;
+    z-index: 0;
 }
 
 #chair-display-img {
@@ -110,6 +173,26 @@
     right:10vw;
     bottom:-2rem;
     z-index: -1;
+}
+
+.product-hover-detail {
+    position:absolute;
+    max-width: 25vw;
+    max-height: 25vh;
+    right:45vw;
+    bottom:50vh;
+    z-index: 1;
+    visibility: hidden;
+    opacity:0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+.ficon {
+    font-size:1.5em;
 }
 
 /*box-shadow: 0 9px 30px 3px rgba(0,0,0,.46);*/
@@ -146,6 +229,12 @@
     border-radius: 35px;
     background-color: rgba(250, 250, 250, 0.75);
     position: absolute;
+  }
+
+  #tippy-test {
+      position:absolute;
+      right: 28vw;
+      bottom: 75vh;      
   }
 
   #btn-cushion1 {
