--- a/components/navigation.html
+++ b/components/navigation.html
@@ -8,25 +8,25 @@
             <ul class="navbar-nav ml-auto">
 
                 <li class="nav-item active mr-sm-2" >
-                <a class="nav-link" href="#" id="nav-index">Nordhold<span class="sr-only">(current)</span></a>
+                <a class="nav-link nh-menu" href="#" id="nav-home" onclick="navGoTo(this)">Nordhold</a>
                 </li>       
                 
                 <li class="nav-item">                    
-                <a class="nav-link" href="#" id="nav-products">Fotele</a>
+                <a class="nav-link nh-menu" href="#" id="nav-products" onclick="navGoTo(this)">Fotele</a>
                 </li>                                             
 
                 <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-articles">Porady</a>
+                <a class="nav-link nh-menu" href="#" id="nav-articles" onclick="navGoTo(this)">Porady</a>
                 </li>
     
                 <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-faq">FAQ</a>
+                <a class="nav-link nh-menu" href="#" id="nav-faq" onclick="navGoTo(this)">FAQ</a>
                 </li>
     
                 <li class="nav-item">
-                <a class="nav-link" href="#" id="nav-contact">Kontakt</a>
+                <a class="nav-link nh-menu" href="#" id="nav-contact" onclick="navGoTo(this)">Kontakt</a>
                 </li>               
 
             </ul>
-        </div>
     </nav>
+
