--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab|Ruda&subset=latin-ext');
+
+body {
+    font: size 16;        
+    font-family: 'Roboto Slab', serif;
+}
+
+h1,h2,h3,h4,h5,h6,h7,h8,h9 {
+    font-family: 'Ruda', sans-serif;
+}
+
 .background { 
         position: fixed;
         top:0;
@@ -24,7 +35,7 @@
 }
 
 #header-desc-text {    
-    background-color: rgba(250, 250, 250, 0.65);
+    background-color: rgba(255, 255, 255, 0.65);
     padding: 1rem;
 }
 
@@ -40,122 +51,7 @@
     padding-top:2rem;
 }
 
-#products-container {
-    padding-top:3vh;
-}
 
-#product-container {
-    background-color: rgba(250, 250, 250, 0.6);
-}
-
-#product-modal-desc {
-    max-width: 80vw;
-}
-
-#color-select {
-    width: 10rem;
-    position: absolute;
-    top: 25vh;
-    right:5rem;   
-    z-index: 1;     
-    background-color: rgba(250, 250, 250, 0.65);
-}
-
-#product-name {
-    width: 35rem;
-    position: absolute;
-    top:2rem;
-    left:2rem;       
-    background-color: rgba(250, 250, 250, 0.65);
-}
-
-#more-info {
-    width: 35rem;
-    position: absolute;
-    top:8rem;
-    left:2rem;   
-    z-index: 1;    
-    background-color: rgba(250, 250, 250, 0.65); 
-}
-
-#photo-gallery {
-    width: 35rem;
-    position: absolute;
-    top:36rem;
-    left:2rem;   
-    z-index: 1;    
-    background-color: rgba(250, 250, 250, 0.65); 
-}
-
-.product-photo-mini {
-    min-width: 10rem;
-}
-
-.product-photo-mini-modal {
-    width: 7rem;
-}
-
-.product-photo-modal-big {
-    width:100%;
-}
-
-#product-gallery-modal {          
-    left:27vw;
-    top:7rem;
-}
-
-.product-photo-modal-navbutton {
-    font-size:1.8rem;
-    position:absolute;
-    top:11.5rem; 
-}
-
-#product-photo-modal-navbutton-next {
-    right:-4rem;  
-}
-
-#product-photo-modal-navbutton-previous {     
-    left:-4rem;  
-}
-
-.color-select-button {
-    width:7rem;
-}
-
-.more-info-button {
-    font-size: 0.9em;
-}
-
-#chair-display {
-    position:absolute;
-    width:100%;
-    height:100%;
-    z-index: 0;
-}
-
-#chair-display-img {
-    height:100%;
-    position:absolute;
-    right:10vw;
-    bottom:-2rem;
-    z-index: -1;
-}
-
-.product-hover-detail {
-    position:absolute;
-    max-width: 25vw;
-    max-height: 25vh;
-    right:45vw;
-    bottom:50vh;
-    z-index: 1;
-    visibility: hidden;
-    opacity:0;
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -ms-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-}
 
 .ficon {
     font-size:1.5em;
@@ -204,7 +100,7 @@
     font-size: 0px;
     line-height: 1.33;
     border-radius: 35px;
-    background-color: rgba(250, 250, 250, 0.75);
+    background-color: rgba(255, 255, 255, 0.75);
     position: absolute;
   }
 
@@ -315,4 +211,149 @@
     right:3vw;
     background: url("../img/home/chairs.png") no-repeat;
     background-size: contain;
+}
+
+/* PRODUCT PAGE*/
+
+#product-desc-container {
+  position: absolute;
+  min-width:468px;  
+  z-index: 0;  
+  padding: 2em;
+  padding-bottom:0em;
+    
+}
+
+#product-model-selector {
+    height: 7vh;    
+}
+
+.product-desc-element {
+    margin-bottom: 0.7em;
+    background-color: rgba(255, 255, 255, 0.65);
+    max-width: 38em;
+    z-index:10;
+}
+
+#product-container {
+    
+}
+
+#more-info {    
+    height: 48vh;
+}
+
+#product-desc-tab-content{
+    height:80%;
+    background-color: rgb(255, 255, 255, 0.7);
+}
+
+.photo-gallery {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    height: 38vh;
+}
+
+.product-photo-mini {
+    max-width: 11em;
+    margin:auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+#product-modal-desc {
+    max-width: 80vw;
+}
+
+
+
+#color-select {
+    width: 10rem;
+    position: absolute;
+    top: 25vh;
+    right:5rem;   
+    z-index: 1;     
+    background-color: rgba(255, 255, 255, 0.65);
+}
+
+
+
+
+
+
+
+
+.product-photo-mini-modal {
+    width: 7rem;
+}
+
+.product-photo-modal-big {
+    width:100%;
+}
+
+#product-gallery-modal {          
+    left:27vw;
+    top:7rem;
+}
+
+.product-photo-modal-navbutton {
+    font-size:1.8rem;
+    position:absolute;
+    top:11.5rem; 
+}
+
+#product-photo-modal-navbutton-next {
+    right:-4rem;  
+}
+
+#product-photo-modal-navbutton-previous {     
+    left:-4rem;  
+}
+
+.color-select-button {
+    width:7rem;
+}
+
+.more-info-button {
+    font-size: 0.9em;
+}
+
+#chair-display {
+    position:absolute;
+    width:100%;
+    height:100%;
+}
+
+#chair-display-img {
+    height:100%;
+    position:absolute;
+    right:10vw;
+    bottom:-2rem;
+}
+
+.product-hover-detail {
+    position:absolute;
+    max-width: 25vw;
+    max-height: 25vh;
+    right:45vw;
+    bottom:50vh;
+    z-index: 1;
+    visibility: hidden;
+    opacity:0;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -ms-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
 }
