--- a/components/products.html
+++ b/components/products.html
@@ -3,33 +3,25 @@
     <!-- MODEL SELECTOR -->
     <div class="card product-desc-element" id="product-name">
         <div class="card-body" id="product-model-selector">
-            <h3 class="card-title">Model: <div class="btn-group">
-                <button class="btn btn-red btn-lg" type="button">Ymir</button>
-                <button type="button" class="btn btn-lg btn-red dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <span class="sr-only">Wybierz model:</span>
-                </button>
-                <div class="dropdown-menu">
-                  ...
-                </div>
-              </div>
-            </h3>										            
+                <h3 class="card-title" id="product-model-name">Nordhold Ymir </h3>                                										            
         </div>
-    </div>
+</div>
+
     <!-- MODEL SELECTOR END -->
 
     <!-- TABBED DESC -->
     <div class="card product-desc-element" id="more-info">
             <div class="card-body">
-                <div class="tabs-wrapper"> 
-                    <ul class="nav classic-tabs tabs-orange" role="tablist">
+                <div class="tabs-wrapper" id="more-info-tabs-menu">                         
+                    <ul class="nav classic-tabs" role="tablist">
                         <li class="nav-item">
-                            <a href="#panel61" class="btn btn-red darken-1 more-info-button" id="red" data-toggle="tab" href="#panel61" role="tab"><i class="fas fa-paste ficon"></i>Opis</a>
+                            <a href="#panel61" class="btn darken-1 more-info-button" id="button-red" data-toggle="tab" role="tab">Opis</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#panel62" class="btn btn-red darken-1 more-info-button" id="red" data-toggle="tab" href="#panel61" role="tab"><i class="fas fa-edit ficon"></i>Wymiary</a>
+                            <a href="#panel62" class="btn darken-1 more-info-button" id="button-red" data-toggle="tab" role="tab">Wymiary</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#panel63" class="btn btn-red darken-1 more-info-button" id="red" data-toggle="tab" href="#panel61" role="tab"><i class="fab fa-readme ficon"></i>Instrukcja</a>
+                            <a href="#panel63" class="btn darken-1 more-info-button" id="button-red" data-toggle="tab" role="tab">Instrukcja</a>
                         </li>
                     </ul>
                 </div>
@@ -70,31 +62,31 @@
         <div class="card-body">
             <div class="photo-gallery">               
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/1.JPG" class="img-fluid product-photo-mini">
+                            <img src="img/ymir/red/mini/1.JPG" class="img-fluid product-photo-mini" id="m1">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/2.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/2.JPG" class="img-fluid card product-photo-mini" id="m2">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/3.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/3.JPG" class="img-fluid card product-photo-mini" id="m3">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/4.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/4.JPG" class="img-fluid card product-photo-mini" id="m4">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/5.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/5.JPG" class="img-fluid card product-photo-mini" id="m5">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/6.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/6.JPG" class="img-fluid card product-photo-mini" id="m6">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/7.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/7.JPG" class="img-fluid card product-photo-mini" id="m7">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/8.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/8.JPG" class="img-fluid card product-photo-mini" id="m8">
                         </a>
                         <a href="#" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="img/ymir/9.JPG" class="img-fluid card product-photo-mini">
+                            <img src="img/ymir/red/mini/9.JPG" class="img-fluid card product-photo-mini" id="m9">
                         </a>            
                 </div>
             </div>
@@ -108,15 +100,19 @@
 <div class="modal-dialog modal-fluid" role="document" id="product-gallery-modal">
 <div class="modal-content modal-lg" >
   <div class="modal-header">
-    <h5 class="modal-title" id="exampleModalCenterTitle">Nordhold Ymir Photo Gallery</h5>
+    <h5 class="modal-title" id="exampleModalCenterTitle">Nordhold Ymir - Galeria Zdjęć</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    <img src="img/ymir/1.JPG" class="product-photo-modal-big">
-    <a href="#" class="btn btn-primary product-photo-modal-navbutton" id="product-photo-modal-navbutton-next"><i class="fas fa-arrow-circle-right ficon"></i></a>
-    <a href="#" class="btn btn-primary product-photo-modal-navbutton" id="product-photo-modal-navbutton-previous"><i class="fas fa-arrow-circle-left ficon"></i></a>
+    <img src="img/ymir/red/1.JPG" id="product-photo-modal-big">
+    <a href="#" class="btn btn-primary product-photo-modal-navbutton" id="product-photo-modal-navbutton-next">
+            <svg xmlns="http://www.w3.org/2000/svg" class="svg-arrow" id="svg-arrow-left" viewBox="0 0 512 512"><path d="M256 8c137 0 248 111 248 248S393 504 256 504 8 393 8 256 119 8 256 8zm-28.9 143.6l75.5 72.4H120c-13.3 0-24 10.7-24 24v16c0 13.3 10.7 24 24 24h182.6l-75.5 72.4c-9.7 9.3-9.9 24.8-.4 34.3l11 10.9c9.4 9.4 24.6 9.4 33.9 0L404.3 273c9.4-9.4 9.4-24.6 0-33.9L271.6 106.3c-9.4-9.4-24.6-9.4-33.9 0l-11 10.9c-9.5 9.6-9.3 25.1.4 34.4z"/></svg>
+    </a>
+    <a href="#" class="btn btn-primary product-photo-modal-navbutton" id="product-photo-modal-navbutton-previous">        
+        <svg xmlns="http://www.w3.org/2000/svg" class="svg-arrow" id="svg-arrow-right" viewBox="0 0 512 512"><path d="M256 504C119 504 8 393 8 256S119 8 256 8s248 111 248 248-111 248-248 248zm28.9-143.6L209.4 288H392c13.3 0 24-10.7 24-24v-16c0-13.3-10.7-24-24-24H209.4l75.5-72.4c9.7-9.3 9.9-24.8.4-34.3l-11-10.9c-9.4-9.4-24.6-9.4-33.9 0L107.7 239c-9.4 9.4-9.4 24.6 0 33.9l132.7 132.7c9.4 9.4 24.6 9.4 33.9 0l11-10.9c9.5-9.5 9.3-25-.4-34.3z"/></svg>            
+    </a>
   </div>
   <div class="modal-footer">
     
@@ -125,37 +121,41 @@
 </div>
 </div>
 
-<!--
+
     <div class="card" id="color-select">
             <div class="card-body">
-                <h2 class="card-title">Choose colour</h2>
-                <a href="#" class="btn btn-red darken-1 color-select-button" id="red">Red</a>
-                <a href="#" class="btn btn-light-green accent-2 color-select-button" id="green">Green</a>
-                <a href="#" class="btn btn-blue darken-3 color-select-button" id="blue">Blue</a>
-                <a href="#" class="btn btn-grey lighten-2 color-select-button" id="white">White</a>				
+                <h2 class="card-title">Kolory</h2>
+                <p class="card-text">Wybierz i sprawdź jak wygląda!</p>
+                <a href="#" class="btn color-select-button" id="button-red">Czerwony</a>
+                <a href="#" class="btn color-select-button" id="button-green">Zielony</a>
+                <a href="#" class="btn color-select-button" id="button-blue">Niebieski</a>
+                <a href="#" class="btn color-select-button" id="button-white">Biały</a>				
             </div>
         </div>
-    <div id="chair-display">		
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-cushion1" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-cushion2" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-armrest" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-backadjust" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-seat" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-back" title="tooltip"><i class="fa fa-circle-o faa-burst animated"></i></button>		
-    <img src="img/chair-blue.png" id="chair-display-img">			
-    </div>	
+    <div id="chair-display">
+        <img src="img/chair-red.png" id="chair-display-img">			
+    </div>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-cushion1" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-cushion2" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-armrest" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-backadjust" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-seat" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-back" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>		
+    
+    	
     <div class="card-details-container">
     <div class="card product-hover-detail">
-
             <img class="card-img-top" src="img/ymir/cushion1.JPG" alt="Cushion img desc">			  
-
             <div class="card-body white rounded-bottom">			  
-
-              <h4 class="card-title"><a>Product detail</a></h4>
-
-              <p class="card-text">Description of the product detail..</p>				  
+              <h4 class="card-title"><a>Detal</a></h4>
+              <p class="card-text"></p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>				  
             </div>			  
           </div>
     </div>
--->
+
 </section>
+
+
+<script type="text/javascript" src="js/productgallery.js"></script>
+<script type="text/javascript" src="js/productdetailhover.js"></script>
+<script type="text/javascript" src="js/colorselect.js"></script>
