--- a/css/main.css
+++ b/css/main.css
@@ -180,7 +180,7 @@ h1,h2,h3,h4,h5,h6,h7,h8,h9 {
     height: 7vh;    
 }
 
-#product-model-name {
+.product-model-name {
     font-size: calc(0.7rem + 2vh);
     font-weight: 600;
 }
