--- a/components/products.html
+++ b/components/products.html
@@ -31,22 +31,47 @@
                 
                     <!--Panel 1-->
                     <div class="tab-pane fade in show active" id="panel61" role="tabpanel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>
+                       
+
+
+                            <p>
+                                Czy zastanawialiście się kiedyś jak wielki wpływ na Twoją skuteczność mają warunki w jakich korzystacie z komputera? My tak, dlatego też korzystając ze swojego wieloletniego doświadczenia na rynku oraz pasji zdecydowaliśmy się na zaprojektowanie wysokiej jakości, komfortowych foteli gamingowych.
+                            </p>
+                            
+                            <p>
+                            Nowoczesny wygląd, kształt inspirowany kubełkowymi fotelami w samochodach rajdowych. Wybór jednego z aż czterech dostępnych kolorów pozowli Ci idealnie wkomponować fotel Nordhold Ymir w plan wybranego pomieszczenia.
+                            </p>
+                        
+              
                 
                     </div>
                     <!--/.Panel 1-->
                 
                     <!--Panel 2-->
                     <div class="tab-pane fade" id="panel62" role="tabpanel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>
+                        
+                        <ul>                                                            
+                                <li>Szerokość fotela: 58cm</li>
+                                <li>Głębokość: 69cm</li>
+                                <li>Maksymalna wysokość: 132cm</li>
+                                <li>Minimalna wysokość: 123cm</li>
+                                <li>Maksymalna wysokość siedzenia: 53cm</li>
+                                <li>Minimalna wysokość siedzenia: 45cm</li>
+                                <li>Wysokość oparcia: 80cm</li>
+                                <li>Szerokość oparcia: 52cm</li>
+                                <li>Głębokość siedziska: 51cm</li>
+                                <li>Szerokość siedziska: 52cm</li>
+                                <li>Długość podłokietnika: 28cm</li>
+                                <li>Szerokość podłokietnika: 8cm</li>
+                        </ul>
+
                 
                     </div>
                     <!--/.Panel 2-->
                 
                     <!--Panel 3-->
                     <div class="tab-pane fade" id="panel63" role="tabpanel">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>
+                        <p>Instrukcja dostępna po 28.05.2018</p>
                 
                     </div>
                     <!--/.Panel 3-->
@@ -140,15 +165,15 @@
     <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-armrest" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
     <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-backadjust" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
     <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-seat" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>
-    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-back" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>		
+    <button type="button" class="btn btn-circle border border-dark btn-product-details" id="btn-wheels" title="tooltip"><i class="fa fa-circle-o faa-burst animated" id="element-red"></i></button>		
     
     	
     <div class="card-details-container">
     <div class="card product-hover-detail">
-            <img class="card-img-top" src="img/ymir/cushion1.JPG" alt="Cushion img desc">			  
+            <img class="card-img-top" src="img/ymir/detal/1g.JPG" id="detail-img">			  
             <div class="card-body white rounded-bottom">			  
-              <h4 class="card-title"><a>Detal</a></h4>
-              <p class="card-text"></p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil odit magnam minima, soluta doloribus reiciendis molestiae placeat unde eos molestias. Quisquam aperiam, pariatur. Tempora, placeat ratione porro voluptate odit minima.</p>				  
+              <h4 class="card-title"><a id="detail-card-title">Detal</a></h4>
+              <p class="card-text" id="detail-card-text">Opis</p>				  
             </div>			  
           </div>
     </div>
