--- a/components/home.html
+++ b/components/home.html
@@ -9,9 +9,9 @@
             
             
         <div id="header-desc">            
-            <h1 id="header-desc-text">Lorem ipsum dolor sit amet</h1>
+            <h1 id="header-desc-text">Nagłówek</h1>
             <p id="header-desc-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
+            Opis.... - -- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
             </p>            
         </div>                 
 </div>
