--- a/components/navigation.html
+++ b/components/navigation.html
@@ -25,8 +25,10 @@
     
                 <li class="nav-item">
                 <a class="nav-link nh-menu" href="#" id="nav-contact" onclick="navGoTo(this)">Kontakt</a>
-                </li>               
-
+                </li>       
+                <li class="nav-item">
+                        <a class="nav-link nh-menu" href="#" id="nav-store" onclick="navGoTo(this)">Sklepy</a>
+                </li>              
             </ul>
         </div>
 </nav>
