--- a/components/contact.html
+++ b/components/contact.html
@@ -3,48 +3,41 @@
     <div class="contact-container">
         <div>
         <div class="card" id="contact-shop-card">
-                        <!-- Card content -->
-                        <div class="card-body">              
-                        <!-- Title -->
-                        <h4 class="card-title"><a>Kontakt</a></h4>
-                        <!-- Text -->
-                        <p class="card-text" id="contact-form-text">Jeśli masz jakiekolwiek pytania odnośnie naszej oferty, opinie o produktach, sugestie lub chcesz nawiązać współpracę - nie wachaj się, napisz. Bardzo cenimy przejrzystość i kontakt z naszymi klientami. </p>
-                        <p class="card-text" id="contact-form-text">Wypełnij poniższy formularz lub napisz do nas bezpośrednio  <a href="mailto:kontakt@nordhold.pl">kontakt@nordhold.pl</a></p>
-                        </div>              
+            <div class="card-body">              
+                <h4 class="card-title"><a>Kontakt</a></h4>                
+                <p class="card-text" id="contact-form-text">Jeśli masz jakiekolwiek pytania odnośnie naszej oferty, opinie o produktach, sugestie lub chcesz nawiązać współpracę - nie wachaj się, napisz. Bardzo cenimy przejrzystość i kontakt z naszymi klientami. </p>
+                <p class="card-text" id="contact-form-text">Wypełnij formularz lub napisz do nas bezpośrednio  <a href="mailto:kontakt@nordhold.pl">kontakt@nordhold.pl</a></p>
+            </div>              
         </div>
-
+<!--
         <div class="card" id="contact-form">            
 
-            <!-- Card content -->
             <div class="card-body">
           
-              <!-- Title -->
+
               <h4 class="card-title"><a>Napisz do nas</a></h4>
-              <!-- Text -->
               <p class="card-text"><form>
             
-                <!-- Material input text -->
+                
                 <div class="md-form">
                     <i class="fa fa-user prefix grey-text"></i>
                     <input type="text" id="materialFormContactNameEx" class="form-control">
                     <label for="materialFormContactNameEx">Imię</label>
                 </div>
             
-                <!-- Material input email -->
+                
                 <div class="md-form">
                     <i class="fa fa-envelope prefix grey-text"></i>
                     <input type="email" id="materialFormContactEmailEx" class="form-control">
                     <label for="materialFormContactEmailEx">Twój adres email</label>
                 </div>
-                
-                <!-- Material input subject -->
+
                 <div class="md-form">
                     <i class="fa fa-tag prefix grey-text"></i>
                     <input type="text" id="materialFormContactSubjectEx" class="form-control">
                     <label for="materialFormContactSubjectEx">Temat</label>
                 </div>
-                
-                <!-- Material textarea message -->
+
                 <div class="md-form">
                     <i class="fa fa-pencil prefix grey-text"></i>
                     <textarea type="text" id="materialFormContactMessageEx" class="form-control md-textarea" rows="3"></textarea>
@@ -57,7 +50,7 @@
             </form></p>      
             </div>
           
-          </div>
+          </div>-->
         </div>
     </div>
 
