--- a/components/home.html
+++ b/components/home.html
@@ -9,15 +9,36 @@
             
             
         <div id="header-desc">            
-            <h1 id="header-desc-text">Nagłówek</h1>
             <p id="header-desc-text">
-            Opis.... - -- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent sit amet sem tempor, malesuada metus at, pulvinar erat. Pellentesque euismod tempor purus at dictum. Praesent sed sem orci. Proin nec volutpat eros, a semper urna. Fusce porta odio vitae mi posuere efficitur. Quisque ut elit eu libero placerat placerat a pharetra lectus.
-            </p>            
+                <div id="rotator">
+                    <div>a</div>
+                    <div>b</div>
+                    <div>c</div>
+                </div>
+            </p>
+            <!--             
+            <p id="header-desc-text">
+                Niewygodna pozycja może negatywnie wpływać na jakość pracy oraz osiągnięcia 
+                uzyskiwane w grach. W dobie gdy każda milisekunda różnicy w pingu oraz klatka w grze jest na wagę złota często 
+                zapominamy o czynniku ludzkim, czyli o Nas.
+            </p>          
+                <p id="header-desc-text">
+                Gracze oraz inne osoby spędzający dziennie długie godziny przed komputerem są narażeni na problemy 
+                zdrowotne wywołane złą postawą. Fotele Nordhold powstały specjalnie z myślą 
+                o takich warunkach. Cechuje je wysoka ergonomia, dzięki wielu opcjom regulacji dostosujesz 
+                fotel do swoich wymagań.
+                </p>    
+            <p id="header-desc-text">
+                Nowoczesny wygląd, kształt inspirowany kubełkowymi fotelami w samochodach rajdowych. Wybór jednego z aż czterech dostępnych kolorów pozowli Ci idealnie wkomponować fotel Nordhold w plan wybranego pomieszczenia.
+            </p>  
+            -->
         </div>                 
 </div>
 
 <div id="home-chairs-container">
     <div id="home-chairs"></div>  
 </div>  
+
+<script src="../js/text.js"></script>
 
 </section>
