--- a/components/store.html
+++ b/components/store.html
@@ -37,17 +37,21 @@
                     <div class="card card-body" id="store-panel-map">
                             <div id="googleMap" style="width:100%;height:400px;"></div>
 
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(51.508742,-0.120850),
-    zoom:5,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt0ajJ1NDBuBfGX_Hn2W-SycXB682iPiA&callback=myMap"></script>
+                            <script>
+                                function initMap() {
+                                  var dwunastka = {lat: 52.401, lng: 20.947};
+                                  // The map, centered at Uluru
+                                  var map = new google.maps.Map(
+                                      document.getElementById('googleMap'), {zoom: 9, center: dwunastka});
+                                  // The marker, positioned at Uluru
+                                  var marker = new google.maps.Marker({position: dwunastka, map: map});
+                                }
+                                    </script>
+                                
+                            <script async defer
+                            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBt0ajJ1NDBuBfGX_Hn2W-SycXB682iPiA&callback=initMap">
+                            </script>                        
                         </div>
             </div>
         </div>
