--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@ h1,h2,h3,h4,h5,h6,h7,h8,h9 {
 #header-desc-text {    
     background-color: rgba(255, 255, 255, 0.65);
     padding: 1rem;
+    font-size: 1.2em;
 }
 
 
