--- a/components/home.html
+++ b/components/home.html
@@ -9,29 +9,13 @@
             
             
         <div id="header-desc">            
-            <p id="header-desc-text">
-                <div id="rotator">
-                    <div>a</div>
-                    <div>b</div>
-                    <div>c</div>
-                </div>
-            </p>
-            <!--             
-            <p id="header-desc-text">
-                Niewygodna pozycja może negatywnie wpływać na jakość pracy oraz osiągnięcia 
-                uzyskiwane w grach. W dobie gdy każda milisekunda różnicy w pingu oraz klatka w grze jest na wagę złota często 
-                zapominamy o czynniku ludzkim, czyli o Nas.
-            </p>          
-                <p id="header-desc-text">
-                Gracze oraz inne osoby spędzający dziennie długie godziny przed komputerem są narażeni na problemy 
-                zdrowotne wywołane złą postawą. Fotele Nordhold powstały specjalnie z myślą 
-                o takich warunkach. Cechuje je wysoka ergonomia, dzięki wielu opcjom regulacji dostosujesz 
-                fotel do swoich wymagań.
-                </p>    
-            <p id="header-desc-text">
-                Nowoczesny wygląd, kształt inspirowany kubełkowymi fotelami w samochodach rajdowych. Wybór jednego z aż czterech dostępnych kolorów pozowli Ci idealnie wkomponować fotel Nordhold w plan wybranego pomieszczenia.
-            </p>  
-            -->
+                <p id="header-desc-text-big">Komfort, Wydajność, Design  </p>
+            <p id="header-desc-text">                
+                Fotele Nordhold powstały specjalnie z myślą o osobach spędzających codziennie długie godziny przed komputerem. 
+                Wiele opcji regulacji pozwoli dostosować fotel do swoich wymagań, tak abyście mogli wygodnie usiąść oraz odciążyć plecy od kilkugodzinnego siedzenia. 
+                Odpowiednia pozycja może mieć wielki wpływ na jakość pracy oraz osiągnięcia uzyskiwane w grach. 
+                W dobie gdy każda milisekunda różnicy w pingu oraz klatka w grze jest na wagę złota często zapominamy o czynniku ludzkim, czyli o Nas.                
+            </p>                          
         </div>                 
 </div>
 
