--- a/components/navigation.html
+++ b/components/navigation.html
@@ -1,5 +1,5 @@
 <!-- MENU -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark mr-sm-2 blue" id="menu-navbar">    
+<nav class="navbar fixed-top navbar-expand-xl navbar-dark mr-sm-2 blue" id="menu-navbar">    
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
                 <li class="nav-item">                    
                 <a class="nav-link nh-menu" href="#" id="nav-products" onclick="navGoTo(this)">Fotele</a>
                 </li>                                             
-
+<!--
                 <li class="nav-item">
                 <a class="nav-link nh-menu" href="#" id="nav-articles" onclick="navGoTo(this)">Porady</a>
                 </li>
@@ -22,7 +22,7 @@
                 <li class="nav-item">
                 <a class="nav-link nh-menu" href="#" id="nav-faq" onclick="navGoTo(this)">FAQ</a>
                 </li>
-    
+-->    
                 <li class="nav-item">
                 <a class="nav-link nh-menu" href="#" id="nav-contact" onclick="navGoTo(this)">Kontakt</a>
                 </li>       
