--- a/components/products.html
+++ b/components/products.html
@@ -30,26 +30,19 @@
                 <div class="tab-content card" id="product-desc-tab-content">
                 
                     <!--Panel 1-->
-                    <div class="tab-pane fade in show active" id="panel61" role="tabpanel">
-                       
-
-
+                    <div class="tab-pane fade in show active" id="panel61" role="tabpanel">                       
                             <p>
                                 Czy zastanawialiście się kiedyś jak wielki wpływ na Twoją skuteczność mają warunki w jakich korzystacie z komputera? My tak, dlatego też korzystając ze swojego wieloletniego doświadczenia na rynku oraz pasji zdecydowaliśmy się na zaprojektowanie wysokiej jakości, komfortowych foteli gamingowych.
                             </p>
                             
                             <p>
                             Nowoczesny wygląd, kształt inspirowany kubełkowymi fotelami w samochodach rajdowych. Wybór jednego z aż czterech dostępnych kolorów pozowli Ci idealnie wkomponować fotel Nordhold Ymir w plan wybranego pomieszczenia.
-                            </p>
-                        
-              
-                
+                            </p>                                                      
                     </div>
                     <!--/.Panel 1-->
                 
                     <!--Panel 2-->
-                    <div class="tab-pane fade" id="panel62" role="tabpanel">
-                        
+                    <div class="tab-pane fade" id="panel62" role="tabpanel">                        
                         <ul>                                                            
                                 <li>Szerokość fotela: 58cm</li>
                                 <li>Głębokość: 69cm</li>
@@ -63,15 +56,13 @@
                                 <li>Szerokość siedziska: 52cm</li>
                                 <li>Długość podłokietnika: 28cm</li>
                                 <li>Szerokość podłokietnika: 8cm</li>
-                        </ul>
-
-                
+                        </ul>                
                     </div>
                     <!--/.Panel 2-->
                 
                     <!--Panel 3-->
                     <div class="tab-pane fade" id="panel63" role="tabpanel">
-                        <p>Instrukcja dostępna po 28.05.2018</p>
+                        <p><a href="manuals/Ymir.pdf" target="blank">>>Instrukcja w formacie PDF<<</a></p>
                 
                     </div>
                     <!--/.Panel 3-->
